Ganesh Project/src/objects/HiR_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiR_Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HiR Product Id</label>
        <referenceTo>HiR_Product__c</referenceTo>
        <relationshipLabel>HiR Products</relationshipLabel>
        <relationshipName>HiR_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Summary__c</fullName>
        <label>Schedule(Summary)</label>
        <type>TextArea</type>
    </fields>
    <label>HiR Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HiR Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HiR Products</pluralLabel>
    <recordTypes>
        <fullName>Offerings</fullName>
        <active>true</active>
        <label>Offerings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Products</fullName>
        <active>true</active>
        <label>Other Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Programs</fullName>
        <active>true</active>
        <label>Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sections</fullName>
        <active>true</active>
        <label>Sections</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>